--- a/elaan/src/Component/passwords.css
+++ b/elaan/src/Component/passwords.css
@@ -1,11 +1,5 @@
 body {
     background:black;
-    background: radial-gradient(
-      circle,
-      #7781be,
-      #e6e7ed,
-      #c6c7cf;
-    );
   }
   
   .container {
@@ -18,7 +12,7 @@ body {
     margin: auto;
   }
   .container > form {
-    width: 70%;
+    width: 75%;
     border: 1px solid #dfdfdf;
     padding: 20px;
     border-radius: 5px;
@@ -38,7 +32,8 @@ body {
     color: red;
   }
   input{
-    padding: 5% 2.5%;
+    padding: 10% 5%;
+    border-radius: 10px !important;
   }
   label{
     font-weight: 700;
